parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ARC
    CIRCLE
    COLOR
    LINE
    NOT
    PENDOWN
    PENUP
    POINT
    THICKNESS

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID SEMICOLON vars function_list main_function
Rule 2     program -> PROGRAM ID SEMICOLON vars empty main_function
Rule 3     vars -> VARS var_list
Rule 4     var_list -> var_list type id_list SEMICOLON
Rule 5     var_list -> type id_list SEMICOLON
Rule 6     type -> INT
Rule 7     type -> FLOAT
Rule 8     type -> BOOL
Rule 9     type -> CHAR
Rule 10    id_list -> id_list COMMA ID
Rule 11    id_list -> ID
Rule 12    function_list -> function_list function
Rule 13    function_list -> empty
Rule 14    function -> FUNCTION type ID LPAREN param_list RPAREN vars LBRACE statement_list RBRACE
Rule 15    function -> FUNCTION type ID LPAREN param_list RPAREN LBRACE statement_list RBRACE
Rule 16    function -> FUNCTION VOID ID LPAREN param_list RPAREN vars LBRACE statement_list RBRACE
Rule 17    function -> FUNCTION VOID ID LPAREN param_list RPAREN LBRACE statement_list RBRACE
Rule 18    param_list -> param_list COMMA type ID
Rule 19    param_list -> type ID
Rule 20    param_list -> empty
Rule 21    main_function -> MAIN LPAREN RPAREN LBRACE statement_list RBRACE
Rule 22    statement_list -> statement_list statement
Rule 23    statement_list -> statement_list return_statement
Rule 24    statement_list -> statement
Rule 25    statement_list -> return_statement
Rule 26    statement_list -> empty
Rule 27    statement -> assignment SEMICOLON
Rule 28    statement -> function_call SEMICOLON
Rule 29    statement -> read_statement SEMICOLON
Rule 30    statement -> write_statement SEMICOLON
Rule 31    statement -> if_statement
Rule 32    statement -> while_statement
Rule 33    statement -> for_statement
Rule 34    assignment -> ID ASSIGN expression
Rule 35    assignment -> ID LBRACKET expression RBRACKET ASSIGN expression
Rule 36    function_call -> ID LPAREN arg_list RPAREN
Rule 37    function_call -> ID LPAREN RPAREN
Rule 38    arg_list -> arg_list COMMA expression
Rule 39    arg_list -> expression
Rule 40    read_statement -> READ LPAREN id_list RPAREN
Rule 41    write_statement -> WRITE LPAREN write_list RPAREN
Rule 42    write_list -> write_list COMMA expression
Rule 43    write_list -> STRING
Rule 44    write_list -> function_call
Rule 45    write_list -> ID COMMA expression
Rule 46    if_statement -> IF LPAREN expression RPAREN THEN LBRACE statement_list RBRACE
Rule 47    if_statement -> IF LPAREN expression RPAREN THEN LBRACE return_statement RBRACE
Rule 48    if_statement -> IF LPAREN expression RPAREN THEN LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE
Rule 49    if_statement -> IF LPAREN expression RPAREN THEN LBRACE return_statement RBRACE ELSE LBRACE statement_list RBRACE
Rule 50    if_statement -> IF LPAREN expression RPAREN THEN LBRACE statement_list RBRACE ELSE LBRACE return_statement RBRACE
Rule 51    if_statement -> IF LPAREN expression RPAREN THEN LBRACE return_statement RBRACE ELSE LBRACE return_statement RBRACE
Rule 52    while_statement -> WHILE LPAREN expression RPAREN DO LBRACE statement_list RBRACE
Rule 53    for_statement -> FOR ID LBRACKET expression TO expression RBRACKET DO LBRACE statement_list RBRACE
Rule 54    return_statement -> RETURN LPAREN expression RPAREN SEMICOLON
Rule 55    expression -> expression PLUS term
Rule 56    expression -> expression MINUS term
Rule 57    expression -> expression EQ term
Rule 58    expression -> expression NE term
Rule 59    expression -> expression LT term
Rule 60    expression -> expression LE term
Rule 61    expression -> expression GT term
Rule 62    expression -> expression GE term
Rule 63    expression -> expression AND term
Rule 64    expression -> expression OR term
Rule 65    expression -> term
Rule 66    term -> term TIMES factor
Rule 67    term -> term DIVIDE factor
Rule 68    term -> factor
Rule 69    factor -> LPAREN expression RPAREN
Rule 70    factor -> ID
Rule 71    factor -> ID LBRACKET expression RBRACKET
Rule 72    factor -> INTEGER
Rule 73    factor -> function_call
Rule 74    factor -> FLOATING_POINT
Rule 75    empty -> <empty>

Terminals, with rules where they appear

AND                  : 63
ARC                  : 
ASSIGN               : 34 35
BOOL                 : 8
CHAR                 : 9
CIRCLE               : 
COLOR                : 
COMMA                : 10 18 38 42 45
DIVIDE               : 67
DO                   : 52 53
ELSE                 : 48 49 50 51
EQ                   : 57
FLOAT                : 7
FLOATING_POINT       : 74
FOR                  : 53
FUNCTION             : 14 15 16 17
GE                   : 62
GT                   : 61
ID                   : 1 2 10 11 14 15 16 17 18 19 34 35 36 37 45 53 70 71
IF                   : 46 47 48 49 50 51
INT                  : 6
INTEGER              : 72
LBRACE               : 14 15 16 17 21 46 47 48 48 49 49 50 50 51 51 52 53
LBRACKET             : 35 53 71
LE                   : 60
LINE                 : 
LPAREN               : 14 15 16 17 21 36 37 40 41 46 47 48 49 50 51 52 54 69
LT                   : 59
MAIN                 : 21
MINUS                : 56
NE                   : 58
NOT                  : 
OR                   : 64
PENDOWN              : 
PENUP                : 
PLUS                 : 55
POINT                : 
PROGRAM              : 1 2
RBRACE               : 14 15 16 17 21 46 47 48 48 49 49 50 50 51 51 52 53
RBRACKET             : 35 53 71
READ                 : 40
RETURN               : 54
RPAREN               : 14 15 16 17 21 36 37 40 41 46 47 48 49 50 51 52 54 69
SEMICOLON            : 1 2 4 5 27 28 29 30 54
STRING               : 43
THEN                 : 46 47 48 49 50 51
THICKNESS            : 
TIMES                : 66
TO                   : 53
VARS                 : 3
VOID                 : 16 17
WHILE                : 52
WRITE                : 41
error                : 

Nonterminals, with rules where they appear

arg_list             : 36 38
assignment           : 27
empty                : 2 13 20 26
expression           : 34 35 35 38 39 42 45 46 47 48 49 50 51 52 53 53 54 55 56 57 58 59 60 61 62 63 64 69 71
factor               : 66 67 68
for_statement        : 33
function             : 12
function_call        : 28 44 73
function_list        : 1 12
id_list              : 4 5 10 40
if_statement         : 31
main_function        : 1 2
param_list           : 14 15 16 17 18
program              : 0
read_statement       : 29
return_statement     : 23 25 47 49 50 51 51
statement            : 22 24
statement_list       : 14 15 16 17 21 22 23 46 48 48 49 50 52 53
term                 : 55 56 57 58 59 60 61 62 63 64 65 66 67
type                 : 4 5 14 15 18 19
var_list             : 3 4
vars                 : 1 2 14 16
while_statement      : 32
write_list           : 41 42
write_statement      : 30

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID SEMICOLON vars function_list main_function
    (2) program -> . PROGRAM ID SEMICOLON vars empty main_function

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . ID SEMICOLON vars function_list main_function
    (2) program -> PROGRAM . ID SEMICOLON vars empty main_function

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM ID . SEMICOLON vars function_list main_function
    (2) program -> PROGRAM ID . SEMICOLON vars empty main_function

    SEMICOLON       shift and go to state 4


state 4

    (1) program -> PROGRAM ID SEMICOLON . vars function_list main_function
    (2) program -> PROGRAM ID SEMICOLON . vars empty main_function
    (3) vars -> . VARS var_list

    VARS            shift and go to state 6

    vars                           shift and go to state 5

state 5

    (1) program -> PROGRAM ID SEMICOLON vars . function_list main_function
    (2) program -> PROGRAM ID SEMICOLON vars . empty main_function
    (12) function_list -> . function_list function
    (13) function_list -> . empty
    (75) empty -> .

    MAIN            reduce using rule 75 (empty -> .)
    FUNCTION        reduce using rule 75 (empty -> .)

    function_list                  shift and go to state 7
    empty                          shift and go to state 8

state 6

    (3) vars -> VARS . var_list
    (4) var_list -> . var_list type id_list SEMICOLON
    (5) var_list -> . type id_list SEMICOLON
    (6) type -> . INT
    (7) type -> . FLOAT
    (8) type -> . BOOL
    (9) type -> . CHAR

    INT             shift and go to state 11
    FLOAT           shift and go to state 12
    BOOL            shift and go to state 13
    CHAR            shift and go to state 14

    var_list                       shift and go to state 9
    type                           shift and go to state 10

state 7

    (1) program -> PROGRAM ID SEMICOLON vars function_list . main_function
    (12) function_list -> function_list . function
    (21) main_function -> . MAIN LPAREN RPAREN LBRACE statement_list RBRACE
    (14) function -> . FUNCTION type ID LPAREN param_list RPAREN vars LBRACE statement_list RBRACE
    (15) function -> . FUNCTION type ID LPAREN param_list RPAREN LBRACE statement_list RBRACE
    (16) function -> . FUNCTION VOID ID LPAREN param_list RPAREN vars LBRACE statement_list RBRACE
    (17) function -> . FUNCTION VOID ID LPAREN param_list RPAREN LBRACE statement_list RBRACE

    MAIN            shift and go to state 17
    FUNCTION        shift and go to state 18

    main_function                  shift and go to state 15
    function                       shift and go to state 16

state 8

    (2) program -> PROGRAM ID SEMICOLON vars empty . main_function
    (13) function_list -> empty .
    (21) main_function -> . MAIN LPAREN RPAREN LBRACE statement_list RBRACE

  ! shift/reduce conflict for MAIN resolved as shift
    FUNCTION        reduce using rule 13 (function_list -> empty .)
    MAIN            shift and go to state 17

  ! MAIN            [ reduce using rule 13 (function_list -> empty .) ]

    main_function                  shift and go to state 19

state 9

    (3) vars -> VARS var_list .
    (4) var_list -> var_list . type id_list SEMICOLON
    (6) type -> . INT
    (7) type -> . FLOAT
    (8) type -> . BOOL
    (9) type -> . CHAR

    MAIN            reduce using rule 3 (vars -> VARS var_list .)
    FUNCTION        reduce using rule 3 (vars -> VARS var_list .)
    LBRACE          reduce using rule 3 (vars -> VARS var_list .)
    INT             shift and go to state 11
    FLOAT           shift and go to state 12
    BOOL            shift and go to state 13
    CHAR            shift and go to state 14

    type                           shift and go to state 20

state 10

    (5) var_list -> type . id_list SEMICOLON
    (10) id_list -> . id_list COMMA ID
    (11) id_list -> . ID

    ID              shift and go to state 22

    id_list                        shift and go to state 21

state 11

    (6) type -> INT .

    ID              reduce using rule 6 (type -> INT .)


state 12

    (7) type -> FLOAT .

    ID              reduce using rule 7 (type -> FLOAT .)


state 13

    (8) type -> BOOL .

    ID              reduce using rule 8 (type -> BOOL .)


state 14

    (9) type -> CHAR .

    ID              reduce using rule 9 (type -> CHAR .)


state 15

    (1) program -> PROGRAM ID SEMICOLON vars function_list main_function .

    $end            reduce using rule 1 (program -> PROGRAM ID SEMICOLON vars function_list main_function .)


state 16

    (12) function_list -> function_list function .

    MAIN            reduce using rule 12 (function_list -> function_list function .)
    FUNCTION        reduce using rule 12 (function_list -> function_list function .)


state 17

    (21) main_function -> MAIN . LPAREN RPAREN LBRACE statement_list RBRACE

    LPAREN          shift and go to state 23


state 18

    (14) function -> FUNCTION . type ID LPAREN param_list RPAREN vars LBRACE statement_list RBRACE
    (15) function -> FUNCTION . type ID LPAREN param_list RPAREN LBRACE statement_list RBRACE
    (16) function -> FUNCTION . VOID ID LPAREN param_list RPAREN vars LBRACE statement_list RBRACE
    (17) function -> FUNCTION . VOID ID LPAREN param_list RPAREN LBRACE statement_list RBRACE
    (6) type -> . INT
    (7) type -> . FLOAT
    (8) type -> . BOOL
    (9) type -> . CHAR

    VOID            shift and go to state 25
    INT             shift and go to state 11
    FLOAT           shift and go to state 12
    BOOL            shift and go to state 13
    CHAR            shift and go to state 14

    type                           shift and go to state 24

state 19

    (2) program -> PROGRAM ID SEMICOLON vars empty main_function .

    $end            reduce using rule 2 (program -> PROGRAM ID SEMICOLON vars empty main_function .)


state 20

    (4) var_list -> var_list type . id_list SEMICOLON
    (10) id_list -> . id_list COMMA ID
    (11) id_list -> . ID

    ID              shift and go to state 22

    id_list                        shift and go to state 26

state 21

    (5) var_list -> type id_list . SEMICOLON
    (10) id_list -> id_list . COMMA ID

    SEMICOLON       shift and go to state 27
    COMMA           shift and go to state 28


state 22

    (11) id_list -> ID .

    SEMICOLON       reduce using rule 11 (id_list -> ID .)
    COMMA           reduce using rule 11 (id_list -> ID .)
    RPAREN          reduce using rule 11 (id_list -> ID .)


state 23

    (21) main_function -> MAIN LPAREN . RPAREN LBRACE statement_list RBRACE

    RPAREN          shift and go to state 29


state 24

    (14) function -> FUNCTION type . ID LPAREN param_list RPAREN vars LBRACE statement_list RBRACE
    (15) function -> FUNCTION type . ID LPAREN param_list RPAREN LBRACE statement_list RBRACE

    ID              shift and go to state 30


state 25

    (16) function -> FUNCTION VOID . ID LPAREN param_list RPAREN vars LBRACE statement_list RBRACE
    (17) function -> FUNCTION VOID . ID LPAREN param_list RPAREN LBRACE statement_list RBRACE

    ID              shift and go to state 31


state 26

    (4) var_list -> var_list type id_list . SEMICOLON
    (10) id_list -> id_list . COMMA ID

    SEMICOLON       shift and go to state 32
    COMMA           shift and go to state 28


state 27

    (5) var_list -> type id_list SEMICOLON .

    INT             reduce using rule 5 (var_list -> type id_list SEMICOLON .)
    FLOAT           reduce using rule 5 (var_list -> type id_list SEMICOLON .)
    BOOL            reduce using rule 5 (var_list -> type id_list SEMICOLON .)
    CHAR            reduce using rule 5 (var_list -> type id_list SEMICOLON .)
    MAIN            reduce using rule 5 (var_list -> type id_list SEMICOLON .)
    FUNCTION        reduce using rule 5 (var_list -> type id_list SEMICOLON .)
    LBRACE          reduce using rule 5 (var_list -> type id_list SEMICOLON .)


state 28

    (10) id_list -> id_list COMMA . ID

    ID              shift and go to state 33


state 29

    (21) main_function -> MAIN LPAREN RPAREN . LBRACE statement_list RBRACE

    LBRACE          shift and go to state 34


state 30

    (14) function -> FUNCTION type ID . LPAREN param_list RPAREN vars LBRACE statement_list RBRACE
    (15) function -> FUNCTION type ID . LPAREN param_list RPAREN LBRACE statement_list RBRACE

    LPAREN          shift and go to state 35


state 31

    (16) function -> FUNCTION VOID ID . LPAREN param_list RPAREN vars LBRACE statement_list RBRACE
    (17) function -> FUNCTION VOID ID . LPAREN param_list RPAREN LBRACE statement_list RBRACE

    LPAREN          shift and go to state 36


state 32

    (4) var_list -> var_list type id_list SEMICOLON .

    INT             reduce using rule 4 (var_list -> var_list type id_list SEMICOLON .)
    FLOAT           reduce using rule 4 (var_list -> var_list type id_list SEMICOLON .)
    BOOL            reduce using rule 4 (var_list -> var_list type id_list SEMICOLON .)
    CHAR            reduce using rule 4 (var_list -> var_list type id_list SEMICOLON .)
    MAIN            reduce using rule 4 (var_list -> var_list type id_list SEMICOLON .)
    FUNCTION        reduce using rule 4 (var_list -> var_list type id_list SEMICOLON .)
    LBRACE          reduce using rule 4 (var_list -> var_list type id_list SEMICOLON .)


state 33

    (10) id_list -> id_list COMMA ID .

    SEMICOLON       reduce using rule 10 (id_list -> id_list COMMA ID .)
    COMMA           reduce using rule 10 (id_list -> id_list COMMA ID .)
    RPAREN          reduce using rule 10 (id_list -> id_list COMMA ID .)


state 34

    (21) main_function -> MAIN LPAREN RPAREN LBRACE . statement_list RBRACE
    (22) statement_list -> . statement_list statement
    (23) statement_list -> . statement_list return_statement
    (24) statement_list -> . statement
    (25) statement_list -> . return_statement
    (26) statement_list -> . empty
    (27) statement -> . assignment SEMICOLON
    (28) statement -> . function_call SEMICOLON
    (29) statement -> . read_statement SEMICOLON
    (30) statement -> . write_statement SEMICOLON
    (31) statement -> . if_statement
    (32) statement -> . while_statement
    (33) statement -> . for_statement
    (54) return_statement -> . RETURN LPAREN expression RPAREN SEMICOLON
    (75) empty -> .
    (34) assignment -> . ID ASSIGN expression
    (35) assignment -> . ID LBRACKET expression RBRACKET ASSIGN expression
    (36) function_call -> . ID LPAREN arg_list RPAREN
    (37) function_call -> . ID LPAREN RPAREN
    (40) read_statement -> . READ LPAREN id_list RPAREN
    (41) write_statement -> . WRITE LPAREN write_list RPAREN
    (46) if_statement -> . IF LPAREN expression RPAREN THEN LBRACE statement_list RBRACE
    (47) if_statement -> . IF LPAREN expression RPAREN THEN LBRACE return_statement RBRACE
    (48) if_statement -> . IF LPAREN expression RPAREN THEN LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE
    (49) if_statement -> . IF LPAREN expression RPAREN THEN LBRACE return_statement RBRACE ELSE LBRACE statement_list RBRACE
    (50) if_statement -> . IF LPAREN expression RPAREN THEN LBRACE statement_list RBRACE ELSE LBRACE return_statement RBRACE
    (51) if_statement -> . IF LPAREN expression RPAREN THEN LBRACE return_statement RBRACE ELSE LBRACE return_statement RBRACE
    (52) while_statement -> . WHILE LPAREN expression RPAREN DO LBRACE statement_list RBRACE
    (53) for_statement -> . FOR ID LBRACKET expression TO expression RBRACKET DO LBRACE statement_list RBRACE

  ! shift/reduce conflict for RETURN resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for READ resolved as shift
  ! shift/reduce conflict for WRITE resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
    RETURN          shift and go to state 48
    RBRACE          reduce using rule 75 (empty -> .)
    ID              shift and go to state 49
    READ            shift and go to state 50
    WRITE           shift and go to state 51
    IF              shift and go to state 52
    WHILE           shift and go to state 53
    FOR             shift and go to state 54

  ! RETURN          [ reduce using rule 75 (empty -> .) ]
  ! ID              [ reduce using rule 75 (empty -> .) ]
  ! READ            [ reduce using rule 75 (empty -> .) ]
  ! WRITE           [ reduce using rule 75 (empty -> .) ]
  ! IF              [ reduce using rule 75 (empty -> .) ]
  ! WHILE           [ reduce using rule 75 (empty -> .) ]
  ! FOR             [ reduce using rule 75 (empty -> .) ]

    statement_list                 shift and go to state 37
    statement                      shift and go to state 38
    return_statement               shift and go to state 39
    empty                          shift and go to state 40
    assignment                     shift and go to state 41
    function_call                  shift and go to state 42
    read_statement                 shift and go to state 43
    write_statement                shift and go to state 44
    if_statement                   shift and go to state 45
    while_statement                shift and go to state 46
    for_statement                  shift and go to state 47

state 35

    (14) function -> FUNCTION type ID LPAREN . param_list RPAREN vars LBRACE statement_list RBRACE
    (15) function -> FUNCTION type ID LPAREN . param_list RPAREN LBRACE statement_list RBRACE
    (18) param_list -> . param_list COMMA type ID
    (19) param_list -> . type ID
    (20) param_list -> . empty
    (6) type -> . INT
    (7) type -> . FLOAT
    (8) type -> . BOOL
    (9) type -> . CHAR
    (75) empty -> .

    INT             shift and go to state 11
    FLOAT           shift and go to state 12
    BOOL            shift and go to state 13
    CHAR            shift and go to state 14
    RPAREN          reduce using rule 75 (empty -> .)
    COMMA           reduce using rule 75 (empty -> .)

    type                           shift and go to state 55
    param_list                     shift and go to state 56
    empty                          shift and go to state 57

state 36

    (16) function -> FUNCTION VOID ID LPAREN . param_list RPAREN vars LBRACE statement_list RBRACE
    (17) function -> FUNCTION VOID ID LPAREN . param_list RPAREN LBRACE statement_list RBRACE
    (18) param_list -> . param_list COMMA type ID
    (19) param_list -> . type ID
    (20) param_list -> . empty
    (6) type -> . INT
    (7) type -> . FLOAT
    (8) type -> . BOOL
    (9) type -> . CHAR
    (75) empty -> .

    INT             shift and go to state 11
    FLOAT           shift and go to state 12
    BOOL            shift and go to state 13
    CHAR            shift and go to state 14
    RPAREN          reduce using rule 75 (empty -> .)
    COMMA           reduce using rule 75 (empty -> .)

    param_list                     shift and go to state 58
    type                           shift and go to state 55
    empty                          shift and go to state 57

state 37

    (21) main_function -> MAIN LPAREN RPAREN LBRACE statement_list . RBRACE
    (22) statement_list -> statement_list . statement
    (23) statement_list -> statement_list . return_statement
    (27) statement -> . assignment SEMICOLON
    (28) statement -> . function_call SEMICOLON
    (29) statement -> . read_statement SEMICOLON
    (30) statement -> . write_statement SEMICOLON
    (31) statement -> . if_statement
    (32) statement -> . while_statement
    (33) statement -> . for_statement
    (54) return_statement -> . RETURN LPAREN expression RPAREN SEMICOLON
    (34) assignment -> . ID ASSIGN expression
    (35) assignment -> . ID LBRACKET expression RBRACKET ASSIGN expression
    (36) function_call -> . ID LPAREN arg_list RPAREN
    (37) function_call -> . ID LPAREN RPAREN
    (40) read_statement -> . READ LPAREN id_list RPAREN
    (41) write_statement -> . WRITE LPAREN write_list RPAREN
    (46) if_statement -> . IF LPAREN expression RPAREN THEN LBRACE statement_list RBRACE
    (47) if_statement -> . IF LPAREN expression RPAREN THEN LBRACE return_statement RBRACE
    (48) if_statement -> . IF LPAREN expression RPAREN THEN LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE
    (49) if_statement -> . IF LPAREN expression RPAREN THEN LBRACE return_statement RBRACE ELSE LBRACE statement_list RBRACE
    (50) if_statement -> . IF LPAREN expression RPAREN THEN LBRACE statement_list RBRACE ELSE LBRACE return_statement RBRACE
    (51) if_statement -> . IF LPAREN expression RPAREN THEN LBRACE return_statement RBRACE ELSE LBRACE return_statement RBRACE
    (52) while_statement -> . WHILE LPAREN expression RPAREN DO LBRACE statement_list RBRACE
    (53) for_statement -> . FOR ID LBRACKET expression TO expression RBRACKET DO LBRACE statement_list RBRACE

    RBRACE          shift and go to state 59
    RETURN          shift and go to state 48
    ID              shift and go to state 49
    READ            shift and go to state 50
    WRITE           shift and go to state 51
    IF              shift and go to state 52
    WHILE           shift and go to state 53
    FOR             shift and go to state 54

    statement                      shift and go to state 60
    return_statement               shift and go to state 61
    assignment                     shift and go to state 41
    function_call                  shift and go to state 42
    read_statement                 shift and go to state 43
    write_statement                shift and go to state 44
    if_statement                   shift and go to state 45
    while_statement                shift and go to state 46
    for_statement                  shift and go to state 47

state 38

    (24) statement_list -> statement .

    RBRACE          reduce using rule 24 (statement_list -> statement .)
    RETURN          reduce using rule 24 (statement_list -> statement .)
    ID              reduce using rule 24 (statement_list -> statement .)
    READ            reduce using rule 24 (statement_list -> statement .)
    WRITE           reduce using rule 24 (statement_list -> statement .)
    IF              reduce using rule 24 (statement_list -> statement .)
    WHILE           reduce using rule 24 (statement_list -> statement .)
    FOR             reduce using rule 24 (statement_list -> statement .)


state 39

    (25) statement_list -> return_statement .

    RBRACE          reduce using rule 25 (statement_list -> return_statement .)
    RETURN          reduce using rule 25 (statement_list -> return_statement .)
    ID              reduce using rule 25 (statement_list -> return_statement .)
    READ            reduce using rule 25 (statement_list -> return_statement .)
    WRITE           reduce using rule 25 (statement_list -> return_statement .)
    IF              reduce using rule 25 (statement_list -> return_statement .)
    WHILE           reduce using rule 25 (statement_list -> return_statement .)
    FOR             reduce using rule 25 (statement_list -> return_statement .)


state 40

    (26) statement_list -> empty .

    RBRACE          reduce using rule 26 (statement_list -> empty .)
    RETURN          reduce using rule 26 (statement_list -> empty .)
    ID              reduce using rule 26 (statement_list -> empty .)
    READ            reduce using rule 26 (statement_list -> empty .)
    WRITE           reduce using rule 26 (statement_list -> empty .)
    IF              reduce using rule 26 (statement_list -> empty .)
    WHILE           reduce using rule 26 (statement_list -> empty .)
    FOR             reduce using rule 26 (statement_list -> empty .)


state 41

    (27) statement -> assignment . SEMICOLON

    SEMICOLON       shift and go to state 62


state 42

    (28) statement -> function_call . SEMICOLON

    SEMICOLON       shift and go to state 63


state 43

    (29) statement -> read_statement . SEMICOLON

    SEMICOLON       shift and go to state 64


state 44

    (30) statement -> write_statement . SEMICOLON

    SEMICOLON       shift and go to state 65


state 45

    (31) statement -> if_statement .

    RBRACE          reduce using rule 31 (statement -> if_statement .)
    RETURN          reduce using rule 31 (statement -> if_statement .)
    ID              reduce using rule 31 (statement -> if_statement .)
    READ            reduce using rule 31 (statement -> if_statement .)
    WRITE           reduce using rule 31 (statement -> if_statement .)
    IF              reduce using rule 31 (statement -> if_statement .)
    WHILE           reduce using rule 31 (statement -> if_statement .)
    FOR             reduce using rule 31 (statement -> if_statement .)


state 46

    (32) statement -> while_statement .
